--- a/Entrega2-war/web/tecnico.xhtml
+++ b/Entrega2-war/web/tecnico.xhtml
@@ -3,8 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
     <h:head>
 
@@ -14,7 +13,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
 
-        <title>Servicios Sociales - Jefe de Servicio</title>
+        <title>Servicios Sociales - Tecnico</title>
 
         <!-- Bootstrap Core CSS -->
         <link href="resources/plantilla/css/bootstrap.min.css" rel="stylesheet" />
@@ -39,7 +38,7 @@
 
     <h:body>
         <c:choose>
-            <c:when test="#{controlAutorizacion.jefeServicio}">
+            <c:when test="#{controlAutorizacion.isTecnico()}">
 
                 <div id="wrapper">
 
@@ -54,7 +53,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="jefeServicio.xhtml">Tecnico</a>
+                            <a class="navbar-brand" href="tecnico.xhtml">Tecnico</a>
                         </div>
                         <!-- Top Menu Items -->
                         <ul class="nav navbar-right top-nav">
@@ -82,7 +81,12 @@
 
                                     <!-- Gestion de usuarios -->
                                     <li>
-                                        <h:commandLink  action="asignarDemandasAtecnicos.xhtml" ><i class="fa fa-fw fa-edit"></i> Asignar demanda</h:commandLink>
+                                        <h:commandLink action="agenda.xhtml" ><i class="fa fa-fw fa-edit"></i> Mi Agenda </h:commandLink>
+
+                                    </li>
+                                    <li>
+                                        <h:commandLink action="verCiudadanos.xhtml" ><i class="fa fa-fw fa-edit"></i> Ver ciudadanos </h:commandLink>
+
                                     </li>
 
                                 </ul>
@@ -98,12 +102,33 @@
                             <!-- Page Heading -->
 
                             <div class="jumbotron">
-                                <h1>¡Bienvenido Jefe de Servicio!</h1>
+                                <h1>¡Bienvenido Tecnico!</h1>
+
+                                <p>
+
+                                    <script type="text/javascript">
+                                        //<![CDATA[
+                                        function makeArray() {
+                                            for (i = 0; i < makeArray.arguments.length; i++)
+                                                this[i + 1] = makeArray.arguments[i];
+                                        }
+                                        var months = new makeArray('Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo',
+                                                'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre');
+                                        var date = new Date();
+                                        var day = date.getDate();
+                                        var month = date.getMonth() + 1;
+                                        var yy = date.getYear();
+                                        var year = (yy < 1000) ? yy + 1900 : yy;
+                                        document.write("Hoy es " + day + " de " + months[month] + " del " + year);
+                                        //]]>
+                                    </script>
+
+
+                                </p>
                             </div>
 
                             <!-- Este es el div del cuerpo de la página -->
                             <div>
-                               
                             </div>
                             <!-- Fin del div del cuerpo de la página -->
 
