--- a/Entrega2-war/web/agenda.xhtml
+++ b/Entrega2-war/web/agenda.xhtml
@@ -3,9 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
 
         <!--<meta charset="utf-8" />-->
@@ -39,8 +38,7 @@
 
     <h:body>
         <c:choose>
-            <c:when test="#{controlAutorizacion.isTecnico()}">
-
+            <c:when test="#{controlAutorizacion.tecnico}">
                 <div id="wrapper">
 
                     <!-- Navigation -->
@@ -64,7 +62,7 @@
                                 <ul class="dropdown-menu">
                                     <h:form>
                                         <li >
-                                            <h:commandLink action="perfilTec.xhtml"><i class="fa fa-fw fa-user"></i> Perfil </h:commandLink>
+                                            <h:commandLink action="perfil.xhtml"><i class="fa fa-fw fa-user"></i> Perfil </h:commandLink>
                                         </li>
 
                                         <li class="divider"></li>
@@ -77,7 +75,7 @@
                         </ul>
                         <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
                         <div class="collapse navbar-collapse navbar-ex1-collapse">
-                           <h:form>
+                            <h:form>
                                 <ul class="nav navbar-nav side-nav">
 
                                     <!-- Gestion de usuarios -->
@@ -89,52 +87,106 @@
                                         <h:commandLink action="verCiudadanos.xhtml" ><i class="fa fa-fw fa-edit"></i> Ver ciudadanos </h:commandLink>
 
                                     </li>
+                                    <li>
+                                        <h:commandLink action="gestionarExpedientes.xhtml" ><i class="fa fa-fw fa-edit"></i> Gestionar Expedientes </h:commandLink>
+                                    </li>
 
                                 </ul>
                             </h:form>
                         </div>
                         <!-- /.navbar-collapse -->
                     </nav>
+                    <div id="page-wrapper" >
 
-                    <div id="page-wrapper">
+                        <center> <h:form>
+                                <p:growl id="messages" showDetail="true" />
 
-                        <div class="container-fluid">
+                                <h:panelGrid columnClasses="value">
 
-                            <!-- Page Heading -->
+                                    <p:schedule id="schedule" value="#{scheduleView.eventModel}" widgetVar="myschedule" timeZone="GMT+2">
 
-                            <div class="jumbotron">
-                                <h1>Mi agenda</h1>
+                                        <p:ajax event="dateSelect" listener="#{scheduleView.onDateSelect}" update="eventDetails" oncomplete="PF('eventDialog').show();" />
+                                        <p:ajax event="eventSelect" listener="#{scheduleView.onEventSelect}" update="eventDetails" oncomplete="PF('eventDialog').show();" />
+                                        <p:ajax event="eventMove" listener="#{scheduleView.onEventMove}" update="messages" />
+                                        <p:ajax event="eventResize" listener="#{scheduleView.onEventResize}" update="messages" />
+
+                                    </p:schedule>
 
 
-                            </div>
+                                </h:panelGrid>
 
-                            <!-- Este es el div del cuerpo de la página -->
-                            <div>
-                               
-                            </div>
-                            <!-- Fin del div del cuerpo de la página -->
+                                <p:dialog widgetVar="eventDialog" header="Evento" showEffect="clip" hideEffect="clip">
+                                    <h:panelGrid id="eventDetails" columns="2">
+                                        <p:messages autoUpdate="true" />
 
-                        </div>
-                        <!-- /.container-fluid -->
+                                        <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5" >
+                                            <p:outputLabel for="console" value="Tipo:" />
+                                            <p:selectOneMenu id="console"  style="width:125px" >
+                                                <f:selectItem itemLabel="Reunion" itemValue="Reunion" />
+                                                <f:selectItem itemLabel="Baja" itemValue="Baja" />
+                                                <f:selectItem itemLabel="Demanda" itemValue="Demanda" />
+
+                                            </p:selectOneMenu>
+                                        </h:panelGrid>
+                                        <h:outputLabel for="title" value="Motivo:" />
+                                        <p:inputText id="title" value="#{scheduleView.event.title}"  required="true" />
+
+                                        <h:outputLabel for="desde" value="Desde:" />
+                                        <p:inputMask id="from" value="#{scheduleView.event.startDate}" mask="99/99/9999">
+                                            <f:convertDateTime pattern="dd/MM/yyyy" timeZone="GMT+2"/>
+                                        </p:inputMask>
+
+                                        <h:outputLabel for="hasta" value="Hasta:" />
+                                        <p:inputMask id="to" value="#{scheduleView.event.endDate}" mask="99/99/9999">
+                                            <f:convertDateTime pattern="dd/MM/yyyy" timeZone="GMT+2"/>
+                                        </p:inputMask>
+                                        <h:outputLabel for="hora" value="Hora:" />
+                                        <p:inputMask id="hora" value="" mask="99:99">
+                                            <f:convertDateTime pattern="h:mm a" timeZone="GMT+2"/>
+                                        </p:inputMask>
+                                        <h:outputLabel for="allDay" value="Todo el día:" />
+                                        <h:selectBooleanCheckbox id="allDay" value="#{scheduleView.event.allDay}" />
+
+                                        <p:commandButton type="reset" value="Limpiar" />
+                                        <p:commandButton id="addButton" value="Guardar" actionListener="#{scheduleView.addEvent}" oncomplete="PF('myschedule').update();PF('eventDialog').hide();" />
+                                    </h:panelGrid>
+                                </p:dialog>    
+                            </h:form></center>
+
+                        <script type="text/javascript">
+                            PrimeFaces.locales['tr'] = {
+                                closeText: 'kapat',
+                                prevText: 'geri',
+                                nextText: 'ileri',
+                                currentText: 'bugün',
+                                monthNames: ['Ocak', 'Şubat', 'Mart', 'Nisan', 'Mayıs', 'Haziran',
+                                    'Temmuz', 'Ağustos', 'Eylül', 'Ekim', 'Kasım', 'Aralık'],
+                                monthNamesShort: ['Oca', 'Şub', 'Mar', 'Nis', 'May', 'Haz',
+                                    'Tem', 'Ağu', 'Eyl', 'Eki', 'Kas', 'Ara'],
+                                dayNames: ['Pazar', 'Pazartesi', 'Salı', 'Çarşamba', 'Perşembe', 'Cuma', 'Cumartesi'],
+                                dayNamesShort: ['Pz', 'Pt', 'Sa', 'Ça', 'Pe', 'Cu', 'Ct'],
+                                dayNamesMin: ['Pz', 'Pt', 'Sa', 'Ça', 'Pe', 'Cu', 'Ct'],
+                                weekHeader: 'Hf',
+                                firstDay: 1,
+                                isRTL: false,
+                                showMonthAfterYear: false,
+                                yearSuffix: '',
+                                month: 'Ay',
+                                week: 'Hafta',
+                                day: 'Gün',
+                                allDayText: 'Tüm Gün'
+                            };
+                        </script>
+                        <style type="text/css">
+                            .value {
+                                width: 700px;
+                            }
+                        </style>
 
                     </div>
-                    <!-- /#page-wrapper -->
-
                 </div>
-                <!-- /#wrapper -->
-
-                <!-- jQuery -->
-                <script src="resources/plantilla/js/jquery.js"></script>
-
-                <!-- Bootstrap Core JavaScript -->
-                <script src="resources/plantilla/js/bootstrap.min.js"></script>
-
-                <!-- Morris Charts JavaScript -->
-                <script src="resources/plantilla/js/plugins/morris/raphael.min.js"></script>
-                <script src="resources/plantilla/js/plugins/morris/morris.min.js"></script>
-                <script src="resources/plantilla/js/plugins/morris/morris-data.js"></script>
             </c:when>
         </c:choose>
     </h:body>
-
 </html>
+
