--- a/Entrega2-war/web/tecnico.xhtml
+++ b/Entrega2-war/web/tecnico.xhtml
@@ -88,6 +88,9 @@
                                         <h:commandLink action="verCiudadanos.xhtml" ><i class="fa fa-fw fa-edit"></i> Ver ciudadanos </h:commandLink>
 
                                     </li>
+                                    <li>
+                                        <h:commandLink action="gestionarExpedientes.xhtml" ><i class="fa fa-fw fa-edit"></i> Gestionar Expedientes </h:commandLink>
+                                    </li>
 
                                 </ul>
                             </h:form>
