--- a/Entrega2-war/web/jefeServicio.xhtml
+++ b/Entrega2-war/web/jefeServicio.xhtml
@@ -54,7 +54,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="jefeServicio.xhtml">Tecnico</a>
+                            <a class="navbar-brand" href="jefeServicio.xhtml">Jefe de Servicio</a>
                         </div>
                         <!-- Top Menu Items -->
                         <ul class="nav navbar-right top-nav">
