--- a/Entrega2-war/web/login.xhtml
+++ b/Entrega2-war/web/login.xhtml
@@ -5,7 +5,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
-        <title>Landing Page - Start Bootstrap Theme</title>
+        <title>Servicios Sociales</title>
 
         <!-- Bootstrap Core CSS -->
         <link href="resources/css/bootstrap.min.css" rel="stylesheet"></link>
@@ -32,22 +32,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand topnav" href="#">Start Bootstrap</a>
+                    <a class="navbar-brand topnav" href="#">Servicios Comunitarios</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="#about">About</a>
-                        </li>
-                        <li>
-                            <a href="#services">Services</a>
-                        </li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+                
                 <!-- /.navbar-collapse -->
             </div>
             <!-- /.container -->
@@ -83,9 +71,7 @@
                                                                 </label>
                                                             </div>
                                                         </div>
-                                                        <div class="col-md-6 forgot-pass-content">
-                                                            <a href="javascription:void(0)" class="forgot-pass">Forgot Password</a>
-                                                        </div>
+                                                        
                                                     </div>
                                                 </div>
                                             </h:form>
