--- a/Entrega2-war/web/asignarDemandasAtecnicos.xhtml
+++ b/Entrega2-war/web/asignarDemandasAtecnicos.xhtml
@@ -54,7 +54,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <link class="navbar-brand" href="jefeServicio.xhtml">Jefe de Servicio</link>
+                           <a class="navbar-brand" href="jefeServicio.xhtml">Jefe de Servicio</a>
                         </div>
                         <!-- Top Menu Items -->
                         <ul class="nav navbar-right top-nav">
@@ -64,7 +64,7 @@
                                 <ul class="dropdown-menu">
                                     <h:form>
                                         <li >
-                                            <h:commandLink action="perfilTrabajador.xhtml"><i class="fa fa-fw fa-user"></i> Perfil </h:commandLink>
+                                            <h:commandLink action="perfil.xhtml"><i class="fa fa-fw fa-user"></i> Perfil </h:commandLink>
                                         </li>
 
                                         <li class="divider"></li>
