--- a/Entrega2-war/web/crearCiudadano.xhtml
+++ b/Entrega2-war/web/crearCiudadano.xhtml
@@ -128,7 +128,7 @@
 
                                             <div class="form-group ">
                                                 <label>DNI</label>
-                                                <h:inputText class="form-control" value="#{ciudadanob.dni}"/>
+                                                <h:inputText class="form-control" value="#{ciudadanob.Ciudadano.dni}"/>
                                             </div>
 
                                             <div class="form-group">
