Corrección de menús y otros errores.

--- a/Entrega2-war/web/ciudadano.xhtml
+++ b/Entrega2-war/web/ciudadano.xhtml
@@ -83,7 +83,7 @@
                     <!-- Acciones que pueden realizar los ciudadanos -->
                     <!-- Gestion Cita Previa -->
                     <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-edit"></i> Gestionar Ciudadanos <i class="fa fa-fw fa-caret-down"></i></a>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-edit"></i> Gestionar Citas <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
                             
                             <li>
