--- a/Entrega2-war/web/crearTecnico.xhtml
+++ b/Entrega2-war/web/crearTecnico.xhtml
@@ -54,7 +54,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <h:form><h:commandLink class="navbar-brand" action="Administrador.xhtml">Administratador</h:commandLink></h:form>
+                <h:form><h:commandLink class="navbar-brand" action="administrador.xhtml">Administratador</h:commandLink></h:form>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
