--- a/Entrega2-war/web/administrador.xhtml
+++ b/Entrega2-war/web/administrador.xhtml
@@ -45,18 +45,18 @@
                     <!-- Navigation -->
                     <!--<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" >-->
                     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" >
-                        <!-- Brand and toggle get grouped for better mobile display -->
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            <h:form><h:commandLink class="navbar-brand" action="Administrador.xhtml">Administrador</h:commandLink></h:form>
-                        </div>
-                        <!-- Top Menu Items -->
-                        <ul class="nav navbar-right top-nav">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <h:form><h:commandLink class="navbar-brand" action="administrador.xhtml">Administratador</h:commandLink></h:form>
+            </div>
+            <!-- Top Menu Items -->
+            <ul class="nav navbar-right top-nav">
 
 
                             <li class="dropdown">
@@ -64,7 +64,7 @@
                                 <ul class="dropdown-menu">
                                     <h:form>
                                         <li >
-                                            <h:commandLink action="perfil.xhtml" ><i class="fa fa-fw fa-user"></i> Perfil </h:commandLink>
+                                            <h:commandLink action="perfilAdministrativo.xhtml" ><i class="fa fa-fw fa-user"></i> Perfil </h:commandLink>
                                         </li>
 
                                         <li class="divider"></li>
@@ -75,16 +75,16 @@
                                 </ul>
                             </li>
                         </ul>
-                        <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
                         <div class="collapse navbar-collapse navbar-ex1-collapse">
                             <ul class="nav navbar-nav side-nav">
 
                                 <!-- Gestion de usuarios -->
                                 <li>
                                     <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-edit"></i> Gestionar Usuarios <i class="fa fa-fw fa-caret-down"></i></a>
-                                    <h:form>   
-                                        <ul id="demo" class="collapse">
 
+                                    <ul id="demo" class="collapse">
+                                        <h:form>    
                                             <li>
                                                 <h:commandLink action="crearJefeServicio.xhtml" >Crear Jefe de Servicio</h:commandLink>
                                             </li>
@@ -99,9 +99,9 @@
                                             </li>
                                             <li>
                                                 <h:commandLink action="eliminarUsuario.xhtml">Eliminar Usuario</h:commandLink>                                        </li>
+                                        </h:form>    
+                                    </ul>
 
-                                        </ul>
-                                    </h:form> 
 
                                 </li>
                             </ul>
