--- a/Entrega2-war/web/administrativo.xhtml
+++ b/Entrega2-war/web/administrativo.xhtml
@@ -57,26 +57,23 @@
                         </div>
                         <!-- Top Menu Items -->
                         <ul class="nav navbar-right top-nav">
-                            <h:form>
 
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <h:outputText value="#{controlAutorizacion.usuario.getNombre()}"/><h:outputText value="#{controlAutorizacion.usuario.getApellidos()}"/>  <b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
 
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <h:outputText value="#{controlAutorizacion.usuario.getNombre()}"/><h:outputText value="#{controlAutorizacion.usuario.getApellidos()}"/>  <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <h:form>
                                         <li >
-                                            <h:commandLink action="perfil.xhtml" ><i class="fa fa-fw fa-user"></i> Perfil </h:commandLink>
+                                            <h:commandLink action="perfilAdministrativo.xhtml" ><i class="fa fa-fw fa-user"></i> Perfil </h:commandLink>
                                         </li>
 
                                         <li class="divider"></li>
                                         <li>
                                             <h:commandLink action="#{controlAutorizacion.logout()}"><i class="fa fa-fw fa-power-off"></i> Cerrar Sesión</h:commandLink>
                                         </li>
-
-                                    </ul>
-                                </li>
-                            </h:form>
-
-
+                                    </h:form>
+                                </ul>
+                            </li>
                         </ul>
                         <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
                         <div class="collapse navbar-collapse navbar-ex1-collapse">
