--- a/Entrega2-war/web/crearDemandaCiudadano.xhtml
+++ b/Entrega2-war/web/crearDemandaCiudadano.xhtml
@@ -53,7 +53,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html">Ciudadano</a>
+                            <h:form><h:commandLink class="navbar-brand" action="ciudadano.xhtml">Ciudadano</h:commandLink></h:form>
                         </div>
                         <!-- Top Menu Items -->
                         <ul class="nav navbar-right top-nav">
@@ -77,12 +77,13 @@
                         </ul>
                         <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
                         <div class="collapse navbar-collapse navbar-ex1-collapse">
-                            <ul class="nav navbar-nav side-nav">
-                                <h:form>
+                            <h:form>
+                                <ul class="nav navbar-nav side-nav">
+
                                     <!-- Acciones que pueden realizar los ciudadanos -->
                                     <!-- Gestion Cita Previa -->
                                     <li>
-                                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-edit"></i> Gestionar Ciudadanos <i class="fa fa-fw fa-caret-down"></i></a>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-edit"></i> Gestionar Citas <i class="fa fa-fw fa-caret-down"></i></a>
                                         <ul id="demo" class="collapse">
 
                                             <li>
@@ -103,8 +104,9 @@
                                     <li>
                                         <h:commandLink action="crearDemandaCiudadano.xhtml"><i class="fa fa-fw fa-bar-chart-o"></i> Crear Demanda</h:commandLink>
                                     </li>
-                                </h:form>
-                            </ul>
+
+                                </ul>
+                            </h:form>
                         </div>
                         <!-- /.navbar-collapse -->
                     </nav>
