--- a/Entrega2-war/web/perfil.xhtml
+++ b/Entrega2-war/web/perfil.xhtml
@@ -63,7 +63,7 @@
                                 <ul class="dropdown-menu">
                                     <h:form>
                                         <li >
-                                            <h:commandLink action="perfilTec.xhtml"><i class="fa fa-fw fa-user"></i> Perfil </h:commandLink>
+                                            <h:commandLink action="perfil.xhtml"><i class="fa fa-fw fa-user"></i> Perfil </h:commandLink>
                                         </li>
 
                                         <li class="divider"></li>
